--- a/utorial.html
+++ b/utorial.html
@@ -1,3 +1,11 @@
-<h1>hola, soy un titulo</h1>
-<p>y yo un <b>párrafo</b></p>
-<a href="https://google.com" target="_blank" title="vamos a google!"></a>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>pagina de prueba</title>
+</head>
+<body>
+    <h1>hola soy un titulo</h1>
+    <p>y yo soy un <b>párrafo</b>!</p>
+    <a href="https://google.com" target="_blank" title="vamos a google!">soy un link!</a>
+</body>
+</html>
