wrote css for a website

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Dug</title>
     <link rel="icon" href="img/dug-icon.png.png">
+    <link rel="stylesheet" type="text/css" href="css/Tutorial.css">
+
 </head>
 <body>
 
@@ -17,7 +19,7 @@
         <h2>About Dug</h2>
         <p>Dug is one of the three protagonists of the movie Up. He is an obese golden retriever and a fun-loving man who speaks the language of humans through a special necklace that translates his thoughts into voice, invented by his former teacher, Charles Muntz.</p>
         <img src="img/dug.jpg.jpg">
-        <p>Dug and his friends</p>
+        <p class="caption">Dug and his friends</p>
         <h2>Dug's characteristics</h2>
         <ol>
             <li>he's a golden retriver</li>
